Benchmark loading vector data directly fromMemorySegment